--- a/frontend/src/screens/ProductScreen.css
+++ b/frontend/src/screens/ProductScreen.css
@@ -8,7 +8,7 @@
 }
 .project__ownerProject>div{
     display: flex;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 .project__ownerProject svg{
     height: 20px !important;
